# back/docs/swagger.yaml
@@ -1,5 +1,18 @@
 basePath: /api/v1
 definitions:
+  main.Room:
+    properties:
+      description:
+        type: string
+      id:
+        type: integer
+      name:
+        type: string
+      users:
+        items:
+          $ref: '#/definitions/main.User'
+        type: array
+    type: object
   main.User:
     properties:
       email:
@@ -8,6 +21,10 @@ definitions:
         type: integer
       name:
         type: string
+      rooms:
+        items:
+          $ref: '#/definitions/main.Room'
+        type: array
     type: object
 info:
   contact: {}
@@ -27,6 +44,91 @@ paths:
       summary: ping example
       tags:
       - example
+  /rooms:
+    get:
+      consumes:
+      - application/json
+      description: Get all chat rooms
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/main.Room'
+            type: array
+      summary: Get all rooms
+      tags:
+      - rooms
+    post:
+      consumes:
+      - application/json
+      description: Create a new chat room
+      parameters:
+      - description: Room object
+        in: body
+        name: room
+        required: true
+        schema:
+          $ref: '#/definitions/main.Room'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/main.Room'
+      summary: Create a new room
+      tags:
+      - rooms
+  /rooms/{id}:
+    get:
+      consumes:
+      - application/json
+      description: Get a room by ID with users
+      parameters:
+      - description: Room ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/main.Room'
+      summary: Get a room by ID
+      tags:
+      - rooms
+  /rooms/{roomId}/join/{userId}:
+    post:
+      consumes:
+      - application/json
+      description: Add user to a room
+      parameters:
+      - description: Room ID
+        in: path
+        name: roomId
+        required: true
+        type: integer
+      - description: User ID
+        in: path
+        name: userId
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/main.Room'
+      summary: Join a room
+      tags:
+      - rooms
   /users:
     get:
       consumes:
